--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<footer>
 				<p class="text-muted pull-left markdown">{{footer}}</p>
 				{{! Thanks for not removing the below line and for your support to ProjectPage /}}
-				<p class="text-muted pull-right"><a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a> Powered by <a href="#" target="_blank">ProjectPage</a></p>
+				<p class="text-muted pull-right"><a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a> Powered by <a href="http://alexylem.github.io/projectpage/" target="_blank">ProjectPage</a></p>
 			</footer>
   		</div>
 
