--- a/index.html
+++ b/index.html
@@ -1,164 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="icon" href="../../favicon.ico">
-
-	<title>loading...</title>
-
-	<!-- Bootstrap core CSS -->
-	<!--Loaded dynamically -->
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-
-	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/highlight.js/8.5.0/styles/solarized_light.min.css">
-
-     <link href="css/app.css" rel="stylesheet">
-  </head>
-
-  <body role="document" id="container">
-  	<script id='template' type='text/ractive'>
-
-  		<nav id="navbar" class="navbar navbar-default navbar-fixed-top">
-  			<div class="container">
-  				<div class="navbar-header">
-  					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-  						<span class="sr-only">Toggle navigation</span>
-  						<span class="icon-bar"></span>
-  						<span class="icon-bar"></span>
-  						<span class="icon-bar"></span>
-  					</button>
-					{{#if projectpages}}
-						<ul class="nav navbar-nav">
-							<li class="dropdown">
-								<a class="navbar-brand dropdown-toggle" href="#"  data-toggle="dropdown">{{title}} <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-									{{#each projectpages}}
-										<li><a href="{{url}}">{{#icon}}<span class="glyphicon glyphicon-{{icon}}"></span> {{/}}{{title}}</a></li>
-									{{/each}}
-								</ul>
-							</li>
-						</ul>
-					{{else}}
-						<a class="navbar-brand" href="#">{{title}}</a>
-					{{/if}}
-
-  				</div>
-  				<div class="navbar-collapse collapse">
-  					<ul class="nav navbar-nav">
-  						<li class="active"><a href="#home"><span class="glyphicon glyphicon-home"></span></a></li>
-  						{{#each sections:sectionid}}
-  							{{#if link}}
-  								<li><a href="#{{id}}">{{link}}</a></li>
-  							{{/if}}
-  						{{/each}}
-						{{#if comments}}
-							<li><a href="#disqus_thread">
-								<span class="glyphicon glyphicon-comment"></span>
-							</a></li>
-						{{/if}}
-  					</ul>
-  				</div>
-  			</div>
-  		</nav>
-
-  		<div class="container" id="home">
-
-  			{{#sections:i}}
-	  			{{#if type == 'jumbotron'}}
-		  			<div id="{{id}}" class="section jumbotron text-center" {{#if image}}style="background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) ), url('{{image}}')"{{/if}}>
-		  				<h1>{{title}}</h1>
-		  				<p class="markdown">{{text}}</p>
-						{{#button}}
-							<a class="btn btn-lg btn-primary" href="{{url}}" role="button">
-								<span class="glyphicon glyphicon-{{icon}}"></span> {{button}}
-							</a>
-						{{/}}
-		  			</div>
-
-		  		{{elseif type == 'grid'}}
-				  	<div id="{{id}}" class="section row text-center">
-					  	{{#items:i}}
-				  			<div class="col-sm-4">
-					  			<span class="glyphicon glyphicon-{{icon}} bg-primary img-circle"></span>
-			  					<h3>{{title}}</h3>
-			  					<p class="markdown text-muted">{{text}}</p>
-			  				</div>
-			  			{{/items}}
-		  			</div>
-				{{elseif image}}
-					<div id="{{id}}" class="section row middle">
-						<div class="col-sm-7 {{^i%2}}col-sm-push-5{{/}}">
-							<h2>{{title}}</h2>
-							<p class="lead markdown">{{text}}</p>
-							{{#button}}
-								<a class="btn btn-primary" href="{{url}}" role="button">
-									<span class="glyphicon glyphicon-{{icon}}"></span> {{button}}
-								</a>
-							{{/}}
-						</div>
-						<div class="col-sm-5 {{^i%2}}col-sm-pull-7{{/}} text-center">
-							<img class="img-rounded" src="{{image}}">
-						</div>
-					</div>
-				{{else}}
-					<div id="{{id}}" class="section">
-						{{#./title}}
-							<div class="page-header">
-								<h2>{{title}}</h2>
-							</div>
-						{{/}}
-					</div>
-					<p class="lead markdown">{{text}}</p>
-				{{/if}}
-  			{{/sections}}
-
-			{{#if comments}}
-				<div id="disqus_thread"></div>
-			{{/if }}
-
-			<footer>
-				<p class="text-muted pull-left markdown">{{footer}}</p>
-				{{! Thanks for not removing the below line and for your support to ProjectPage /}}
-				<p class="text-muted pull-right"><a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a> Powered by <a href="http://alexylem.github.io/projectpage/" target="_blank">ProjectPage</a></p>
-			</footer>
-  		</div>
-
-  	</script>
-
-  	<!-- jQuery -->
-  	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
-  	<!-- Ractive -->
-  	<script src='lib/ractive/ractive.min.js'></script>
-
-  	<!-- Bootstrap -->
-  	<script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-
-	<!-- HJson parser -->
-	<script src='lib/hjson/hjson.min.js'></script>
-
-	<!-- Markdown convertor -->
-	<script src="https://cdn.jsdelivr.net/highlight.js/8.5.0/highlight.min.js"></script> <!-- syntax highlighting -->
-	<script src="lib/markdown-it/markdown-it.min.js"></script>
-	<script src="lib/markdown-it/markdown-it-emoji.min.js"></script> <!-- emoji support via ascii chars -->
-	<script src="//twemoji.maxcdn.com/twemoji.min.js"></script> <!-- full emoji support via images -->
-
-  	<!-- App -->
-  	<script src="js/my.js"></script>
-	<!--
-	<script src="config.RENAME-ME.js"></script>
-	<script src="config.js"></script>
-	-->
-  	<script src="js/app.js"></script>
-  </body>
-  </html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=https://github.com/alexylem/jarvis/wiki">
+        <script type="text/javascript">
+            window.location.href = "http://example.com"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, <a href='https://github.com/alexylem/jarvis/wiki'>click here</a>
+    </body>
+</html>
