--- a/disqus.html
+++ b/disqus.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body>
+    <div class="container">
     <h1>Hello, world!</h1>
 
         <a href="https://github.com/alexylem/jarvis/wiki"> &lt; Back to Jarvis Wiki</a>
@@ -44,7 +45,7 @@
             })();
         </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
