--- a/disqus.html
+++ b/disqus.html
@@ -20,9 +20,9 @@
   <body>
     <div class="container">
     <h1>Hello, world!</h1>
-
-        <a href="https://github.com/alexylem/jarvis/wiki"> &lt; Back to Jarvis Wiki</a>
-
+        
+        <a class="btn btn-default glyphicon glyphicon-menu-left" href="https://github.com/alexylem/jarvis/wiki" role="button">Back to Jarvis Wiki</a>
+        
         <div id="disqus_thread"></div>
         <script>
             /**
