--- a/disqus.html
+++ b/disqus.html
@@ -21,9 +21,9 @@
     <div class="container">
       <p></p>
       <ul class="nav nav-tabs">
-        <li role="presentation"><a class="glyphicon glyphicon-home" href="https://github.com/alexylem/jarvis/wiki"> Wiki</a></li>
-        <li role="presentation"><a class="glyphicon glyphicon-exclamation-sign" href="https://github.com/alexylem/jarvis/issues"> Tickets</a></li>
-        <li role="presentation" class="active"><a class="glyphicon glyphicon-comment" href="#"> Discussion</a></li>
+        <li role="presentation"><a href="https://github.com/alexylem/jarvis/wiki"><span class="glyphicon glyphicon-home"></span> Wiki</a></li>
+        <li role="presentation"><a href="https://github.com/alexylem/jarvis/issues"><span class="glyphicon glyphicon-exclamation-sign"></span> Tickets</a></li>
+        <li role="presentation" class="active"><a href="#"><span class="glyphicon glyphicon-comment"></span> Discussion</a></li>
       </ul>
         
         <div id="disqus_thread"></div>
